# iti

./: .gitignore  AGENTS.md  Cargo.toml  DOLT_REMOTE.md  README.md  manifest
.beads/: metadata.json
assets/: iti.css  style.css  system9.css
crates/iti/: Cargo.toml  index.html
crates/iti/src/: assets.rs  color.rs  error.rs  id.rs  lib.rs  library.rs  storage.rs
crates/iti/src/components/: alert.rs  badge.rs  button.rs  button_group.rs  card.rs  checkbox.rs  dropdown.rs  icon.rs  icon_classic.rs  list.rs  mod.rs  modal.rs  overhaul.rs  pane.rs  platinum_kit.rs  progress.rs  radio.rs  select.rs  shadow.rs  slider.rs  tab.rs  table.rs  title_bar.rs  toast.rs  widget.rs
crates/mogwai-embed/: Cargo.toml  README.md
crates/mogwai-embed/src/: blob.rs  head.rs  lib.rs
