[workspace]
members = ["crates/iti"]
resolver = "2"

[workspace.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
fern = "0.6"
futures-lite = "2.3.0"
js-sys = "0.3"
log = "0.4"
mogwai = "0.7"
serde = "1.0"
serde_json = "1.0"
snafu = "0.8.3"
wasm-bindgen = "0.2"

[workspace.dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "Event",
    "HtmlButtonElement",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlInputElement",
    "HtmlLinkElement",
    "HtmlStyleElement",
    "Node",
    "Storage",
    "Text",
    "Url",
    "Window",
]
